--- a/srcs/nginx-conf/nginx.conf
+++ b/srcs/nginx-conf/nginx.conf
@@ -21,4 +21,13 @@ http {
         server_name             _;
         client_max_body_size    32m;
     }
+    server {
+	listen			443 ssl;
+	root			/www;
+	index			index.html index.htm;
+    server_name             _;
+    client_max_body_size    32m;
+	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    }
 }
