--- a/srcs/nginx-conf/default.conf
+++ b/srcs/nginx-conf/default.conf
@@ -1,11 +1,7 @@
 
 server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        listen 443 ssl http2 default_server;
-        listen [::]:443 ssl http2 default_server;
-        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;        # New root location
+        listen 80 default_server;   
+        # New root location
         location / {
                 root /www; 
                 # return 404;
