--- a/srcs/metallb/metallb-config.yaml
+++ b/srcs/metallb/metallb-config.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: metallb-system
+  annotations:
+    metallb.universe.tf/allow-shared-ip: shared
   name: config
 data:
   config: |
@@ -9,4 +11,4 @@ data:
     - name: default
       protocol: layer2
       addresses:
-      - 192.168.99.240-192.168.99.240
+      - 192.168.99.158-192.168.99.158
