--- a/srcs/mysql-conf/my.cnf
+++ b/srcs/mysql-conf/my.cnf
@@ -1,5 +1,5 @@
 [mysqld]
 user = root
-datadir = /app/mysql
+datadir = /work/mysql
 port = 3306
-log-bin = /app/mysql/mysql-bin
+log-bin = /work/mysql/mysql-bin
