--- a/srcs/mysql-conf/my.cnf
+++ b/srcs/mysql-conf/my.cnf
@@ -1,5 +1,5 @@
 [mysqld]
-user = root
-datadir = /work/mysql
+user = mysql
+datadir = /var/lib/mysql
 port = 3306
-log-bin = /work/mysql/mysql-bin
+log-bin = /var/lib/mysql/mysql-bin
