--- a/srcs/mysql-conf/mysql-service.yaml
+++ b/srcs/mysql-conf/mysql-service.yaml
@@ -28,13 +28,16 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-volume
+  labels:
+    type: local
 spec:
+  storageClassName: manual
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/work/mysql"
+    path: "/data"
 ---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -62,7 +65,7 @@ spec:
           name: mysql
         volumeMounts:
         - name: mysql-persistent-storage
-          mountPath: /work/mysql
+          mountPath: "/var/lib/mysql"
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
