--- a/srcs/mysql-conf/mysql-conf.yaml
+++ b/srcs/mysql-conf/mysql-conf.yaml
@@ -59,7 +59,7 @@ spec:
       containers:
       - name: mysql
         imagePullPolicy: Never
-        image: mysql-test
+        image: mysql-server
         ports:
         - containerPort: 3306
           name: mysql
