deal with ports

--- a/srcs/nginx-conf/nginx.conf
+++ b/srcs/nginx-conf/nginx.conf
@@ -20,14 +20,15 @@ http {
         index                   index.html index.htm;
         server_name             _;
         client_max_body_size    32m;
+		return        301  https://$host$request_uri;
     }
     server {
-	listen			443 ssl;
-	root			/www;
-	index			index.html index.htm;
-    server_name             _;
-    client_max_body_size    32m;
-	ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+        listen                  443 ssl;
+        root                    /www;
+        index                   index.html index.htm;
+        server_name             _;
+        client_max_body_size    32m;
+        ssl_certificate         /etc/ssl/certs/nginx-selfsigned.crt;
+        ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
     }
 }
