--- a/srcs/wp-conf/nginx.conf
+++ b/srcs/wp-conf/nginx.conf
@@ -15,7 +15,8 @@ http {
     access_log                  /var/log/nginx/access.log;
     keepalive_timeout           3000;
     server {
-        listen                  80;
+        listen                  5050;
+        rewrite                 /wp-admin$ $scheme://$host:5050/wp-admin/ permanent;
         root                    /www;
         index                   index.html index.htm index.php;
         server_name             _;
