--- a/srcs/wp-conf/wp-conf.yaml
+++ b/srcs/wp-conf/wp-conf.yaml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: wp-service
+  annotations:
+    metallb.universe.tf/allow-shared-ip: shared
+spec:
+  selector:
+    app: wp
+  ports:
+      - name: "http"
+        protocol: TCP
+        port: 5050
+        targetPort: "wp-http"
+  type: LoadBalancer
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,21 +34,5 @@ spec:
         ports:
         - 
           name: "wp-http"
-          containerPort: 80
+          containerPort: 5050
         # command: ["nginx", "-g", "daemon off;"]
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: wp-service
-  annotations:
-    metallb.universe.tf/allow-shared-ip: shared
-spec:
-  selector:
-    app: wp
-  ports:
-      - name: "http"
-        protocol: TCP
-        port: 5050
-        targetPort: 80
-  type: LoadBalancer
