--- a/srcs/nginx-conf/nginx-conf.yaml
+++ b/srcs/nginx-conf/nginx-conf.yaml
@@ -36,8 +36,8 @@ spec:
   ports:
       - name: "http"
         port: 80
-        targetPort: "nginx-http"
+        targetPort: 80
       - name: "https"
         port: 443
-        targetPort: "nginx-https"
+        targetPort: 443
   type: LoadBalancer
