--- a/srcs/nginx-conf/nginx.conf
+++ b/srcs/nginx-conf/nginx.conf
@@ -20,7 +20,7 @@ http {
         index                   index.html index.htm;
         server_name             _;
         client_max_body_size    32m;
-		return        301  https://$host$request_uri;
+		return        301  https://CIP;
     }
     server {
         listen                  443 ssl;
@@ -30,5 +30,15 @@ http {
         client_max_body_size    32m;
         ssl_certificate         /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
+        
+        location /wordpress{
+			return 301 http://CIP:5050;
+		}
+
+        location /phpmyadmin/{
+            proxy_pass http://CIP:5000/;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect  /index.php  /phpmyadmin/index.php;
+        }
     }
 }
