--- a/srcs/nginx-conf/nginx.conf
+++ b/srcs/nginx-conf/nginx.conf
@@ -32,10 +32,10 @@ http {
         ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
         
         location /wordpress{
-			return 301 http://CIP:5050;
+			return 307 http://CIP:5050;
 		}
 
-        location /phpmyadmin/{
+        location /phpmyadmin{
             proxy_pass http://CIP:5000/;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect  /index.php  /phpmyadmin/index.php;
