--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -13,6 +13,9 @@ RUN echo $'TLS                         2\nTLSCipherSuite               HIGH:MEDI
 RUN chmod 600 $PURE_PATH/pure-ftpd.pem
 EXPOSE 21 30000:30009
 
+COPY telegraf.sh /
+RUN sh telegraf.sh
+
 COPY ./ftps.sh /ftps.sh
 
 CMD sh ftps.sh
