--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -15,7 +15,7 @@ EXPOSE 21 30000:30009
 
 COPY telegraf.sh /
 RUN sh telegraf.sh
-
+COPY telegraf.conf /etc/telegraf/
 COPY ./ftps.sh /ftps.sh
 
 CMD sh ftps.sh
