--- a/srcs/wp/Dockerfile
+++ b/srcs/wp/Dockerfile
@@ -21,6 +21,8 @@ RUN mkdir /run/openrc\
 
 COPY telegraf.sh /
 RUN sh telegraf.sh
+COPY telegraf.conf /etc/telegraf/
+
 
 EXPOSE 5050
 CMD php-fpm7 -R && nginx -g "daemon off;"
