dealing with restart

--- a/srcs/influxdb/influxdb-conf.yaml
+++ b/srcs/influxdb/influxdb-conf.yaml
@@ -67,9 +67,15 @@ spec:
         volumeMounts:
         - name: influxdb-persistent-storage
           mountPath: "/var/lib/influxdb"
+        - name: dockersock
+          mountPath: "/var/run/docker.sock"
         command:
             ["sleep", "6000"]
       volumes:
       - name: influxdb-persistent-storage
         persistentVolumeClaim:
           claimName: influxdb-pv-claim
+      - name: dockersock
+        hostPath:
+          path: /var/run/docker.sock  
+
