--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -11,9 +11,9 @@ ADD users.sql /
 ADD wordpress_db.sql /
 VOLUME ["/var/lib/mysql"]
 
-COPY telegraf.sh /
-RUN sh telegraf.sh
-COPY telegraf.conf /etc/telegraf/
+#COPY telegraf.sh /
+#RUN sh telegraf.sh
+#COPY telegraf.conf /etc/telegraf/
 EXPOSE 3306
 
 
