--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -20,7 +20,7 @@ http {
         index                   index.html index.htm;
         server_name             _;
         client_max_body_size    32m;
-		return        301  https://192.168.99.140;
+		return        301  https://CIP;
     }
     server {
         listen                  443 ssl;
@@ -32,11 +32,11 @@ http {
         ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
         
         location /wordpress {
-			return 307 http://192.168.99.140:5050;
+			return 307 http://CIP:5050;
 		}
 
         location /phpmyadmin {
-            proxy_pass http://192.168.99.140:5000/;
+            proxy_pass http://CIP:5000/;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect  /index.php  /phpmyadmin/index.php;
         }
