--- a/srcs/pma/Dockerfile
+++ b/srcs/pma/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.11
 
-RUN apk add --no-cache wget nginx openrc tar
+RUN apk add --no-cache wget nginx openrc tar bash
 RUN adduser -D -g 'www' www
 RUN mkdir /www ; chown -R www:www /www
 RUN mkdir /run/nginx; touch /run/nginx/nginx.pid
@@ -19,13 +19,13 @@ RUN chmod 777 /www/tmp
 RUN mkdir /run/openrc\
   && touch /run/openrc/softlevel
 
-COPY telegraf.sh /
-RUN sh telegraf.sh
-COPY telegraf.conf /etc/telegraf
+#COPY telegraf.sh /
+#RUN sh telegraf.sh
+#:COPY telegraf.conf /etc/telegraf
 EXPOSE 80
-
-CMD php-fpm7 -R && nginx -g "daemon off;"
-
+COPY run.sh /
+#CMD iphp-fpm7 -R && nginx -g "daemon off;"
+ENTRYPOINT ["bash", "/run"]
 
 
 #CMD ["nginx", "-g", "daemon off;"]
