done as i think

--- a/srcs/influxdb/Dockerfile
+++ b/srcs/influxdb/Dockerfile
@@ -1,11 +1,14 @@
 from alpine:3.11
 
 run apk update
-run apk add influxdb openrc --no-cache
+run apk add influxdb openrc --no-cache bash
 run mkdir /run/openrc\
   && touch /run/openrc/softlevel
 copy telegraf.sh /
 run sh telegraf.sh
 copy telegraf.conf /etc/telegraf
+copy run.sh /
 expose 8086
-CMD influxd
+# CMD influxd
+ENTRYPOINT ["bash", "/run.sh"]
+
