--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -35,10 +35,9 @@ http {
 			return 307 http://CIP:5050;
 		}
 
-        location /phpmyadmin {
+        location /phpmyadmin/ {
             proxy_pass http://CIP:5000/;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect  /index.php  /phpmyadmin/index.php;
         }
     }
 }
