--- a/srcs/wp/wp-conf.yaml
+++ b/srcs/wp/wp-conf.yaml
@@ -35,4 +35,4 @@ spec:
         - 
           name: "wp-http"
           containerPort: 5050
-        # command: ["nginx", "-g", "daemon off;"]
+        # command: ["while [ true ];do echo l;done"]
