time to self-correct

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -38,6 +38,7 @@ http {
         location /phpmyadmin/ {
             proxy_pass http://CIP:5000/;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect  /index.php  /phpmyadmin/index.php;
         }
     }
 }
