--- a/srcs/phpmyadmin/phpmyadmin-conf.yaml
+++ b/srcs/phpmyadmin/phpmyadmin-conf.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pma-deployment
+  name: phpmyadmin-deployment
 spec:
   selector:
     matchLabels:
-      app: pma
+      app: phpmyadmin
   template:
     metadata:
       labels:
-        app: pma
+        app: phpmyadmin
     spec:
       containers:
-      - name: pma
+      - name: phpmyadmin
         imagePullPolicy: Never
-        image: pma-server
+        image: phpmyadmin-server
         ports:
         - 
-          name: "pma-http"
+          name: "phpmyadmin-http"
           containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: pma-service
+  name: phpmyadmin-service
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
 spec:
   selector:
-    app: pma
+    app: phpmyadmin
   ports:
       - name: "http"
         protocol: TCP
