--- a/srcs/wordpress/wordpress-conf.yaml
+++ b/srcs/wordpress/wordpress-conf.yaml
@@ -1,38 +1,38 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wp-service
+  name: wordpress-service
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
 spec:
   selector:
-    app: wp
+    app: wordpress
   ports:
       - name: "http"
         protocol: TCP
         port: 5050
-        targetPort: "wp-http"
+        targetPort: "wordpress-http"
   type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wp-deployment
+  name: wordpress-deployment
 spec:
   selector:
     matchLabels:
-      app: wp
+      app: wordpress
   template:
     metadata:
       labels:
-        app: wp
+        app: wordpress
     spec:
       containers:
-      - name: wp
+      - name: wordpress
         imagePullPolicy: Never
-        image: wp-server
+        image: wordpress-server
         ports:
         - 
-          name: "wp-http"
+          name: "wordpress-http"
           containerPort: 5050
         # command: ["while [ true ];do echo l;done"]
